# wayafknext-monitor

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  mutter.rs  util.rs
src/idle_detection/: README.md  mod.rs  wayland_idle.rs
src/monitor/: mod.rs  mutter.rs  wayland.rs
test/: test-monitor.py
