[package]
name = "wayafknext-monitor"
version = "0.2.0"
edition = "2024"
authors = ["MuffinTastic <contact@muffintastic.dev>"]

[profile.release]
opt-level = "s"
panic = "abort"

[dependencies]
anyhow = "1.0.100"
futures-util = "0.3.31"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
signal-hook = "0.3.18"
tokio = { version = "1.47.1", features = ["io-util"] }
tokio-util = "0.7.16"
uzers = "0.12.1"
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client", "staging"] }
wayland-protocols-async = { git = "https://github.com/MuffinTastic/wayland-protocols-async", branch = "main" }
zbus = "5.11.0"
